# maybe-game-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game-engine.sln
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp  SandboxApp.cpp
bin-int/Debug-x64/${ProjectName}/: Sandbox.exe.recipe  game-engine.dll.recipe  vc143.idb
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc143.idb
bin-int/Debug-x64/game-engine/: game-engine.dll.recipe  vc143.idb
game-engine/: game-engine.vcxproj  game-engine.vcxproj.filters
game-engine/src/: Maybe.h  mbpch.h  test.cpp  test.h
game-engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
game-engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
